@@ -1,5 +1,9 @@
 2025-01-08  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/consult-xref-apropos.el:
+	* site-lisp/consult-browser-hist.el: Use the default consult
+	highlight function.
+
 	* init.el: Set customized faces for emacs server.
 	Ignore EGLOT buffers in consult-buffer.
 
